# telemetry-lemoncode-06

./: Ejercicio2.md  README.md
Ejercicio-3/: alloy-local.config.yaml
Ejercicio-4/: ejercicio4.md
Ejercicio-5/jaeger-hotrod/: Notas.md  docker-compose.yml
Ejercicio-5/non-political-map/: .gitignore  README.md  docker-compose.yml  prometheus.yml  scripts.sh
Ejercicio-5/non-political-map/.devcontainer/: devcontainer.json
Ejercicio-5/non-political-map/.docs/: 01-fast.api.md  02-fast.api-statics.md  03-frontend.md  04-using-python-dotenv.md
Ejercicio-5/non-political-map/app_frontend/: index.html  package-lock.json  package.json
Ejercicio-5/non-political-map/app_frontend/src/: items.service.ts  main.ts  retriever.ts
Ejercicio-5/non-political-map/app_kpi_api/: README.md  pyproject.toml
Ejercicio-5/non-political-map/app_kpi_api/app/: config.py  database.py  main.py
Ejercicio-5/non-political-map/app_kpi_api/app/adapters/: kpi_repository_in_memory.py
Ejercicio-5/non-political-map/app_kpi_api/app/domain/: models.py
Ejercicio-5/non-political-map/app_kpi_api/app/ports/: kpi_repository.py
Ejercicio-5/non-political-map/app_kpi_api/app/routers/: altkpis.py  kpis.py
Ejercicio-5/non-political-map/app_kpi_api/app/tests/: mocks.py  test_altkpis_api.py  test_kpi_repository_in_mem.py  test_kpis_api.py
Ejercicio-5/non-political-map/app_map/: main.py  requirements.txt
Ejercicio-5/non-political-map/s3_crud/: README.md  config.py  kpi.parquet  main.py  pyproject.toml
Ejercicio3/: docker-compose.yaml  loki-config.yaml
(+4 files in other folders)
